# ChangeLog for sys-boot/grub
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/ChangeLog,v 1.95 2008/07/05 23:04:07 gentoofan23 Exp $

  05 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org> grub-0.97-r6.ebuild:
  stable amd64, bug 230836

  05 Jul 2008; Robin H. Johnson <robbat2@gentoo.org> files/grub.conf.gentoo,
  grub-0.97-r6.ebuild:
  Support for non-interactive from wolf31o2 per bug #228677.

*grub-0.97-r6 (04 Jun 2008)

  04 Jun 2008; Robin H. Johnson <robbat2@gentoo.org>
  +files/grub.conf.gentoo, +grub-0.97-r6.ebuild:
  Improve the Grub /boot setup procedure, to support people with more
  unusual grub setups where the default config file may not be suitable to
  pass into the grub shell, per bug #218599. Include a stock grub.conf for
  Gentoo users. Install the splashimage to /usr and copy to /boot later
  rather than direct to /boot.

  10 May 2008; Mike Frysinger <vapier@gentoo.org> grub-0.97-r5.ebuild:
  Restore menu.lst symlink #220737 / #221055.

  06 May 2008; Christian Faulhammer <opfer@gentoo.org> grub-0.97-r5.ebuild:
  stable x86, bug 220069

  05 May 2008; Markus Meier <maekke@gentoo.org> grub-0.97-r5.ebuild:
  amd64 stable, bug #220069

  02 May 2008; Robin H. Johnson <robbat2@gentoo.org> grub-0.97-r5.ebuild:
  amd64+static together blow up.

  07 Apr 2008; Robin H. Johnson <robbat2@gentoo.org> grub-0.97-r5.ebuild:
  Bump of patchset only to fix bug #216307. Revbump will happen when I have
  finished tracing the pager bug.

  06 Apr 2008; Mike Frysinger <vapier@gentoo.org> grub-0.97-r5.ebuild:
  Create /boot/boot symlink for people #194201, and dont bother creating
  menu.lst symlink.

  30 Mar 2008; Robin H. Johnson <robbat2@gentoo.org> grub-0.97-r5.ebuild:
  Bring in the warning from bug #98768, as it's now important with the new
  Grub patches.

  30 Mar 2008; Robin H. Johnson <robbat2@gentoo.org> grub-0.97-r5.ebuild: